# bit-brain

./: .gitignore  README.md  main.py  pyproject.toml
bitbrain/data_process/: data_tokenizer_mix.py  download.sh  step1_dataprocess.py
bitbrain/data_process/step2/: en_text_process.yaml  run.sh  zh_text_process.yaml
bitbrain/data_v2/: fine_web_v2.ipynb
bitbrain/dataset/: pretrain_dataset.py  pretrain_dataset_arrow.py
bitbrain/finetune/: process_baai_parquet_data.ipynb  process_deepstrl.ipynb  process_wanjuanexam_data.ipynb  run.sh  run_v3.sh
bitbrain/models/: brain_model.py  gpt.py
bitbrain/train/: pretrain.py  pretrain_v0.py  pretrain_v1.py  pretrain_v10.py  pretrain_v2.py  pretrain_v7.py
bitbrain/train/tools/: mfu.py  utils.py
examples/: README.md
examples/modelscope/: run_bitbrain_base.py
examples/transfomers/: run_bitbrain_base.py
